main/default/objects/Survey_Answer_Sentiment__c/Survey_Answer_Sentiment__c.object-meta.xml
<CustomObject>
    <label>Survey Answer Sentiment</label>
    <nameField>
        <displayFormat>SN-{00000000}</displayFormat>
        <label>Sentiment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answer Sentiments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>