main/default/objects/Survey_Answer_Sentiment__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>positive</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>