main/default/objects/Survey_Answer_Sentiment__c/fields/Polarity__c.field-meta.xml
<CustomField>
    <fullName>Polarity__c</fullName>
    <label>Polarity</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>