main/default/objects/Survey_Answer_Sentiment__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>