main/default/objects/Survey_Answer_Sentiment__c/fields/Survey_Answer__c.field-meta.xml
<CustomField>
    <fullName>Survey_Answer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Survey Answer</label>
    <referenceTo>Survey_Answer__c</referenceTo>
    <relationshipLabel>Survey Answer Sentiments</relationshipLabel>
    <relationshipName>Survey_Answer_Sentiments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>